# dbt-tutorial-dz

./: dbt_project.yml  packages.yml  pyproject.toml
data/: employees.csv
macros/: cents_to_dollar.sql
models/marts/: dim_customer.sql
models/marts/core/: dim_customer.sql  fact_orders.sql  fact_orders_pivot.sql  schema.yml
models/staging/jaffle_shop/: schema.yml  sources.yml  stg_customers.sql  stg_dates.sql  stg_jaffle_shop.yml  stg_orders.sql  stg_payments.sql
models/staging/stripe/: schema.yml
snapshots/: mock_orders.sql
tests/: assert_customers_one_order_have_same_dates.sql  assert_customers_with_zero_order_have_no_values.sql  assert_total_payments_amount_is_positive.sql  fact_orders_assert_not_negative_value.sql
