[tool.poetry]
name = "personio-dbt"
version = "0.1.0"
description = ""
authors = ["dzickuhr <douglas.zickuhr@optum.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
